--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -77,5 +77,12 @@
         <servlet-name>TicketTableCreationServlet</servlet-name>
         <url-pattern>/createtickettable</url-pattern>
     </servlet-mapping>
-
+    <servlet>
+        <servlet-name>GetAllObjects</servlet-name>
+        <servlet-class>servlets.AllObjectsBelongingToUser</servlet-class>
+    </servlet>
+<servlet-mapping>
+    <servlet-name>GetAllObjects</servlet-name>
+    <url-pattern>/getall</url-pattern>
+</servlet-mapping>
 </web-app>
